# BiliBiliRecNotifier

./: .gitignore  Cargo.toml
src/: main.rs
